# lxzz

./: CHANGELOG.md  Makefile  README.md  RELEASE-MANIFEST.json  SECURITY.md
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 4663fd393f70_initial_schema.py  7c21d9f428b1_add_exit_ip_intelligence.py  b81f2a90c4d7_add_favorites_and_routing.py
backend/app/: __init__.py  cli.py  main.py  root_helper.py
backend/app/api/: dependencies.py
backend/app/core/: __init__.py  config.py  logging.py  permissions.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  auth.py  enums.py  network.py  settings.py
backend/app/schemas/: admin.py  auth.py  connections.py  dashboard.py  nodes.py  users.py
backend/app/services/: admin_settings.py  (+2 more)
backend/tests/: conftest.py  test_acceptance.py  test_admin_api.py  test_auth.py  test_auto_switch.py  test_connection_lifecycle_api.py  test_connections_api.py  test_dashboard.py  test_full_scan.py  test_install_security.py  test_ip_intelligence.py  test_killswitch.py  test_migrations.py  test_namespace_manager.py  test_network_commands.py  test_network_executor.py  test_network_validation.py  test_node_scanning.py  test_nodes_api.py  test_openvpn_manager.py  test_rbac.py  test_release_packaging.py  test_root_helper.py  test_security.py  test_socks5_manager.py  test_startup_recovery.py  test_unlock_checks.py  test_vpngate_client.py  test_vpngate_importer.py  test_vpngate_openvpn.py  test_vpngate_parser.py  test_vpngate_storage.py  vpngate_helpers.py
(+91 files in other folders)
