[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "vpngate-manager"
version = "0.2.1"
description = "VPNGate Multi-Exit Manager API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "alembic>=1.14,<2",
  "argon2-cffi>=23.1,<26",
  "cryptography>=44,<48",
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "psutil>=6,<8",
  "pydantic-settings>=2.7,<3",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.34,<1",
]

[project.scripts]
vpngate-root-helper = "app.root_helper:main"

[dependency-groups]
dev = [
  "mypy>=1.14,<2",
  "pytest>=8.3,<9",
  "pytest-cov>=6,<8",
]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
addopts = "-q --disable-warnings --strict-markers"
pythonpath = ["."]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unreachable = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "psutil"
ignore_missing_imports = true
